[tool.poetry]
name = "lgtutorial"
version = "0.1.0"
description = ""
authors = ["Aleem"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
langgraph = "^0.2.56"
langchain-openai = "^0.2.11"
python-dotenv = "^1.0.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
